code25_all/swift/24309005.txt
func stringTest() {

    let test1:String =   "test1";
    let test2:NSString = "test2";

    // <-- Breakpoint here

    println(test1);
    println(test2);
}

po test1
error: <REPL>:1:1: error: use of unresolved identifier 'test1'
test1
^

po test2
test2

